# disease-detector-

./: .replit  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  replit.md
agents/: __init__.py  base_agent.py  explainability_agent.py  feedback_agent.py  input_collection_agent.py  prediction_agent.py  preprocessing_agent.py  report_generator_agent.py
attached_assets/: Pasted--OBJECTIVE-Build-a-realistic-AI-powered-health-screening-assistant-for-a-hackathon-The-app-shou-1751524979674_1751524979675.txt  Pasted--You-are-instructed-to-create-a-disease-detection-web-application-powered-by-AI-agents-The-syste-1751515769875_1751515769876.txt  Pasted-I-want-to-improve-the-accuracy-and-clinical-value-of-my-AI-powered-disease-detection-app-Currently--1751519510939_1751519510940.txt  Pasted-I-want-you-to-improve-and-upgrade-my-disease-detection-system-in-the-following-ways--1751524131416_1751524131416.txt
backend/: agent_orchestrator.py  flask_server.py
config/: settings.py
data/: sample_symptoms.json
utils/: api_clients.py  disease_models.py  file_processors.py  intelligent_diagnosis.py  lab_report_analyzer.py  medical_analysis_engine.py  medical_pdf_extractor.py  simple_pdf_extractor.py  symptom_clustering.py
